tests/errors/expressions_error.wren
import "ifj25" for Ifj
class Program {
    // hlavni funkce main
    static main() {
        var myValue         
        myValue = 1.0

        __a = null
        var dynamic
        dynamic = "ab" * myValue

        if() {

        } else {
            
        }

        Ifj.write(dynamic)
    }
}
